--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 12px;
-  font-family: helvetica, arial, sans-serif;
+  font-family: 'Roboto', helvetica, arial, sans-serif;
 }
 
 .fill {
@@ -29,4 +29,5 @@ body {
 .logo-icon {
   display: inline-block;
   position: relative;
+  top: 1px;
 }
