--- a/index.css
+++ b/index.css
@@ -56,6 +56,10 @@ body {
   top: 1px;
 }
 
+/*
+  Animations
+  ------------------------------------------------------------------------------
+*/
 @-webkit-keyframes rotate {
   from {
     -webkit-transform: rotate(0deg);
@@ -89,5 +93,41 @@ body {
   }
   to { 
     transform: rotate(360deg);
+  }
+}
+
+/*
+  Media queries
+  ------------------------------------------------------------------------------
+*/
+@media (min-width: 1280px) {
+  body .top {
+    width: 960px;
+    margin: auto;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  body .top {
+    width: 960px;
+    margin: auto;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  body .top {
+    width: 100%;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 767px) {
+  body .top {
+    width: 100%;
+  }
+}
+
+@media (max-width: 479px) {
+  body .top {
+    width: 100%;
   }
 }
