--- a/index.css
+++ b/index.css
@@ -22,6 +22,14 @@ body {
  color: #FFF;
 }
 
+body .top {
+  position: absolute;
+  top: 0; bottom: 0;
+  overflow-y: auto;
+  border-left: solid 1px #fff;
+  border-right: solid 1px #fff;
+}
+
 .logo {
   font-size: 20px;  
 }
