--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 12px;
-  font-family: 'Roboto', helvetica, arial, sans-serif;
+  font-family: 'Product Sans', helvetica, arial, sans-serif;
 }
 
 .fill {
