--- a/index.css
+++ b/index.css
@@ -31,6 +31,11 @@ body .top .header {
   border-bottom: #333;
 }
 
+.logo1 { font-family: 'Cabin' }
+.logo2 { font-family: 'Roboto' }
+.logo3 { font-family: 'Questrial' }
+.logo4 { font-family: 'Product Sans' }
+
 .logo {
   font-size: 32px;  
   padding: 6px 10px;
