--- a/index.css
+++ b/index.css
@@ -29,7 +29,8 @@ body .top {
 }
 
 body .top .header {
-  border-bottom: #333;
+  border-bottom: solid 1px transparent;
+  border-image: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
 }
 
 .logo {
