Less loader issue

--- a/styles.less
+++ b/styles.less
@@ -1,6 +1,6 @@
-@import 'less/animations.less';
-@import 'less/common.less';
-@import 'less/media.less';
+@import "./less/animations";
+@import "./less/common";
+@import "./less/media";
 
 html, body {
   height: 100%;
