--- a/styles.less
+++ b/styles.less
@@ -36,6 +36,7 @@ body {
           padding: 6px 10px;
           
           .logo-icon {
+            .rotate-5s;
             position: relative;
             left: 1px;
             display: inline-block;
