--- a/styles.less
+++ b/styles.less
@@ -1,6 +1,6 @@
 @import "./less/animations";
+@import "./less/colors";
 @import "./less/common";
-@import "./less/media";
 
 html, body {
   height: 100%;
@@ -23,12 +23,12 @@ body {
       left: 0;
       width: 240px;
       border-right: solid 1px transparent;
-      border-image: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
+      border-image: @border-gradient;
       border-image-slice: 1;
         
       .header {
         border-bottom: solid 1px transparent;
-        border-image: linear-gradient(90deg,#f7c626 15%,#f68c2f 40%,#e5127d 85%);
+        border-image: @border-gradient;
         border-image-slice: 1;
         
         .logo {
