--- a/styles.less
+++ b/styles.less
@@ -53,3 +53,11 @@ html, body {
   left: @sidebar_width;
   right: 0;
 }
+
+.logo {
+  &-text {
+    font-size: 20px;
+    font-family: 'Varela Round', sans-serif;
+    color: #FFD15C;
+  }
+}
