--- a/styles.less
+++ b/styles.less
@@ -55,7 +55,11 @@ html, body {
 }
 
 .logo {
+  > div {
+    display: inline-block;
+  }
+  
   &-text {
-    font-size: 40px;
+    font-size: 24px;
   }
 }
