--- a/styles.less
+++ b/styles.less
@@ -61,5 +61,13 @@ html, body {
   
   &-text {
     font-size: 24px;
+    
+    >span:first-child {
+      color: #FFE98F;
+    }
+    
+    >span:last-child {
+      color: #91DC5A;
+    }
   }
 }
