--- a/styles.less
+++ b/styles.less
@@ -61,13 +61,6 @@ html, body {
   
   &-text {
     font-size: 24px;
-    
-    >span:first-child {
-      color: #FFE98F;
-    }
-    
-    >span:last-child {
-      color: #91DC5A;
-    }
+    color: #c5c5c5;
   }
 }
