--- a/styles.less
+++ b/styles.less
@@ -60,7 +60,7 @@ html, body {
   }
   
   &-text {
-    font-family: 'Pacifico', cursive;
+    font-family: 'Sacramento', cursive;
     font-size: 40px;
     color: #c5c5c5;
   }
