--- a/styles.less
+++ b/styles.less
@@ -60,8 +60,8 @@ html, body {
   }
   
   &-text {
-    font-family: 'Molle', cursive;
+    font-family: 'Sacramento', cursive;
     font-size: 40px;
-    color: #c5c5c5;
+    color: #FFE98F;
   }
 }
