--- a/styles.less
+++ b/styles.less
@@ -60,8 +60,8 @@ html, body {
   }
   
   &-text {
-    font-family: 'Gruppo', cursive;
+    font-family: 'Dancing Script', cursive;
     font-size: 40px;
-    color: #FFE98F;
+    color: #FFDA44;
   }
 }
